# documind-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  constants.py  main.py
app/api/v1/: analysis.py  documents.py  router.py
app/models/: schemas.py
app/services/: claude_service.py  document_service.py  parser_service.py
app/services/parsers/: __init__.py  base_parser.py  docx_parser.py  ocr_parser.py  pdf_parser.py  txt_parser.py
app/utils/: file_utils.py  text_utils.py
tests/: conftest.py  test_analysis.py  test_documents.py  test_parsers.py  test_utils.py
