[project]
name = "documind-ai"
version = "1.0.0"
description = "Intelligent Document Analysis API powered by Claude AI"
authors = [{ name = "Chinmay Raichur", email = "chinmayraichur@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "document-analysis", "claude", "fastapi", "ocr", "nlp"]

[project.urls]
Homepage = "https://github.com/ChinmayR07/documind-ai"
Repository = "https://github.com/ChinmayR07/documind-ai"

# ─── Ruff (Linter) ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]  # Allow assert in tests

# ─── Black (Formatter) ────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ─── MyPy (Type Checker) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]
